--- a/package.json
+++ b/package.json
@@ -5,7 +5,8 @@
   "main": "index.js",
   "scripts": {
     "start": "node concurrently.js",
-    "build": "node concurrently_build.js"
+    "build": "node concurrently_build.js",
+    "postinstall": "node concurrently_install.js"
   },
   "keywords": [
     "micro frontend",
