--- a/package.json
+++ b/package.json
@@ -4,9 +4,8 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "start": "node concurrently.js",
-    "build": "node concurrently_build.js",
-    "postinstall": "node concurrently_install.js"
+    "start": "node tasks/start.js",
+    "build": "node tasks/build.js"
   },
   "keywords": [
     "micro frontend",
@@ -15,10 +14,14 @@
   "author": "quangnv13",
   "license": "ISC",
   "devDependencies": {
+    "cli-progress": "^3.11.2",
     "concurrently": "^7.6.0",
-    "npm-run-all": "^4.1.5"
+    "execa": "^6.1.0",
+    "inquirer": "8.2.5",
+    "listr": "^0.14.3"
   },
   "dependencies": {
+    "chalk": "4",
     "rxjs": "^7.8.0"
   }
 }
