update keywords in package.json

--- a/package.json
+++ b/package.json
@@ -9,7 +9,13 @@
   },
   "keywords": [
     "micro frontend",
-    "multi framework"
+    "multi framework",
+    "micro frontend distributed",
+    "microfrontend",
+    "micro frontend with shadow dom",
+    "module federation",
+    "micro frontend with module federation",
+    "shadow dom"
   ],
   "author": "quangnv13",
   "license": "ISC",
